--- a/iOS App/TensorDash/TensorDash/View/Base.lproj/Main.storyboard
+++ b/iOS App/TensorDash/TensorDash/View/Base.lproj/Main.storyboard
@@ -812,19 +812,19 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b5P-dk-NcE">
-                                                    <rect key="frame" x="0.0" y="5.5" width="384" height="119"/>
+                                                    <rect key="frame" x="0.0" y="5.5" width="345" height="119"/>
                                                     <subviews>
                                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="tLB-qy-cvC">
-                                                            <rect key="frame" x="15" y="8" width="218.5" height="39"/>
+                                                            <rect key="frame" x="15" y="8" width="220.5" height="43.5"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Project Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bfS-77-j8o">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="73" height="16.5"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="73" height="23.5"/>
                                                                     <fontDescription key="fontDescription" name="RedHatDisplay-Regular" family="Red Hat Display" pointSize="12"/>
                                                                     <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Reinforcement learning part2" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="1Qb-lb-gx6">
-                                                                    <rect key="frame" x="0.0" y="16.5" width="218.5" height="22.5"/>
+                                                                    <rect key="frame" x="0.0" y="23.5" width="220.5" height="20"/>
                                                                     <fontDescription key="fontDescription" name="RedHatDisplay-Regular" family="Red Hat Display" pointSize="17"/>
                                                                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                                     <nil key="highlightedColor"/>
@@ -832,7 +832,7 @@
                                                             </subviews>
                                                         </stackView>
                                                         <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="In Progress" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qsU-je-Dmp">
-                                                            <rect key="frame" x="292" y="8" width="80" height="20"/>
+                                                            <rect key="frame" x="253" y="8" width="80" height="20"/>
                                                             <color key="backgroundColor" red="0.0039215686274509803" green="0.4823529411764706" blue="0.023529411764705882" alpha="1" colorSpace="calibratedRGB"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="20" id="9we-gr-aeH"/>
@@ -848,19 +848,19 @@
                                                             </userDefinedRuntimeAttributes>
                                                         </label>
                                                         <stackView opaque="NO" contentMode="scaleToFill" distribution="equalCentering" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="dOc-ne-rhS">
-                                                            <rect key="frame" x="27" y="67" width="331" height="43.5"/>
+                                                            <rect key="frame" x="27" y="71.5" width="292" height="39"/>
                                                             <subviews>
                                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Gu2-0l-HBx">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="34.5" height="43.5"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="34.5" height="39"/>
                                                                     <subviews>
                                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Epoch" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rfv-0Y-fLQ">
-                                                                            <rect key="frame" x="0.0" y="0.0" width="34.5" height="16"/>
+                                                                            <rect key="frame" x="0.0" y="0.0" width="34.5" height="14"/>
                                                                             <fontDescription key="fontDescription" name="RedHatDisplay-Regular" family="Red Hat Display" pointSize="12"/>
                                                                             <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                                                                             <nil key="highlightedColor"/>
                                                                         </label>
                                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="999" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yla-Mj-UdF">
-                                                                            <rect key="frame" x="2" y="21" width="31" height="22.5"/>
+                                                                            <rect key="frame" x="3" y="19" width="28.5" height="20"/>
                                                                             <fontDescription key="fontDescription" name="RedHatDisplay-Regular" family="Red Hat Display" pointSize="17"/>
                                                                             <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                                             <nil key="highlightedColor"/>
@@ -868,16 +868,16 @@
                                                                     </subviews>
                                                                 </stackView>
                                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="QPR-Pe-Gyw">
-                                                                    <rect key="frame" x="120" y="0.0" width="75.5" height="43.5"/>
+                                                                    <rect key="frame" x="104" y="0.0" width="71" height="39"/>
                                                                     <subviews>
                                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Accuracy" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AJP-hj-Qk9">
-                                                                            <rect key="frame" x="13.5" y="0.0" width="49" height="16"/>
+                                                                            <rect key="frame" x="10" y="0.0" width="50.5" height="14"/>
                                                                             <fontDescription key="fontDescription" name="RedHatDisplay-Regular" family="Red Hat Display" pointSize="12"/>
                                                                             <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                                                                             <nil key="highlightedColor"/>
                                                                         </label>
                                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.999999" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="95s-gV-SlK">
-                                                                            <rect key="frame" x="0.0" y="21" width="75.5" height="22.5"/>
+                                                                            <rect key="frame" x="0.0" y="19" width="71" height="20"/>
                                                                             <fontDescription key="fontDescription" name="RedHatDisplay-Regular" family="Red Hat Display" pointSize="17"/>
                                                                             <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                                             <nil key="highlightedColor"/>
@@ -885,16 +885,16 @@
                                                                     </subviews>
                                                                 </stackView>
                                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="d9p-sw-0ZS">
-                                                                    <rect key="frame" x="265.5" y="0.0" width="65.5" height="43.5"/>
+                                                                    <rect key="frame" x="230.5" y="0.0" width="61.5" height="39"/>
                                                                     <subviews>
                                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loss" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hrs-RZ-YvK">
-                                                                            <rect key="frame" x="20.5" y="0.0" width="25" height="16"/>
+                                                                            <rect key="frame" x="18" y="0.0" width="26" height="14"/>
                                                                             <fontDescription key="fontDescription" name="RedHatDisplay-Regular" family="Red Hat Display" pointSize="12"/>
                                                                             <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                                                                             <nil key="highlightedColor"/>
                                                                         </label>
                                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.99999" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="54e-H9-0tE">
-                                                                            <rect key="frame" x="0.0" y="21" width="65.5" height="22.5"/>
+                                                                            <rect key="frame" x="0.0" y="19" width="61.5" height="20"/>
                                                                             <fontDescription key="fontDescription" name="RedHatDisplay-Regular" family="Red Hat Display" pointSize="17"/>
                                                                             <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                                             <nil key="highlightedColor"/>
@@ -1104,6 +1104,14 @@
                                     </stackView>
                                 </subviews>
                             </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ahd-bw-g4I">
+                                <rect key="frame" x="164" y="490" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <segue destination="YEt-25-FgD" kind="show" id="4pv-Yg-9md"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.18823529411764706" green="0.18823529411764706" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -1137,6 +1145,31 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cXn-L8-1Ka" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="5648.8000000000002" y="-414.24287856071965"/>
+        </scene>
+        <!--Charts View Controller-->
+        <scene sceneID="lcR-gp-w24">
+            <objects>
+                <viewController id="YEt-25-FgD" customClass="chartsViewController" customModule="TensorDash" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="gdH-1X-sqS">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="SVY-Ov-klK" customClass="LineChartView" customModule="Charts">
+                                <rect key="frame" x="0.0" y="98" width="375" height="302"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" red="0.18823529410000001" green="0.18823529410000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <viewLayoutGuide key="safeArea" id="F8K-gB-OMy"/>
+                    </view>
+                    <connections>
+                        <outlet property="lossChart" destination="SVY-Ov-klK" id="JS5-zp-9Gx"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QsM-HR-Mzh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="6864.8000000000002" y="-413.3433283358321"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="bhW-1Y-IT7">
